Fixed applying invalid data from QLineEdit to model [QTBUG-2216]